projects/elements/src/badge/badge.css
:host {
  --background: color-mix(in oklab, var(--status-color) var(--mlv-sys-contrast-mute-ratio), var(--mlv-sys-contrast-mute-color));
  --gap: var(--mlv-ref-space-xs);
  --font-size: var(--mlv-ref-font-size-100);
  --status-color: var(--mlv-sys-status-color);
  --padding: var(--mlv-ref-size-150) var(--mlv-ref-size-200);
  --border-radius: var(--mlv-ref-border-radius-sm);
  --font-weight: var(--mlv-ref-font-weight-semibold);
  --text-transform: capitalize;
  --width: initial;
  --height: initial;
  display: inline-flex;
}

[internal-host] {
  font-weight: var(--font-weight);
  font-size: var(--font-size);
  gap: var(--gap);
  background: var(--background);
  color: color-mix(in oklab, var(--status-color), var(--mlv-sys-text-emphasis-color) 16%);
  padding: var(--padding);
  border-radius: var(--border-radius);
  width: var(--width);
  height: var(--height);
  text-transform: var(--text-transform);
  display: inline-flex;
  align-items: center;
  line-height: 1em;
  place-items: center;
}

slot:not([name]) {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: block;
}

:host([aria-label]) slot:not([name]) {
  display: contents;
}

::slotted([mlv-text]) {
  color: inherit !important;
}

::slotted(a) {
  margin: 0 !important;
  color: inherit !important;
  text-decoration: none !important;
  line-height: 0 !important;
}

mlv-icon,
::slotted(mlv-icon) {
  --color: var(--status-color);
  --width: var(--mlv-ref-size-300);
  --height: var(--mlv-ref-size-300);
}

/* trend status */
:host([status='trend-down']) {
  --status-color: var(--mlv-sys-visualization-trend-negative-emphasis-color);
}

:host([status='trend-up']) {
  --status-color: var(--mlv-sys-visualization-trend-positive-emphasis-color);
}

:host([status='trend-neutral']) {
  --status-color: var(--mlv-sys-status-pending-color);
}

:host([color]) {
  --background: var(--color);
  --border-radius: var(--mlv-ref-border-radius-sm);
}

:host([color]) [internal-host] {
  color: var(--mlv-sys-contrast-mute-color);
}

:host([container='flat']) {
  --background: var(--mlv-sys-background-color);
  --border-radius: var(--mlv-ref-border-radius-sm);
  --status-color: var(--mlv-sys-status-color);
  --gap: var(--mlv-ref-space-xs);
  --padding: 0;
  --text-transform: capitalize;
  --width: initial;
  --height: initial;
}

